--- a/styles.css
+++ b/styles.css
@@ -95,7 +95,7 @@ html {
 .container div:nth-child(2){
     height: 80%;
     width: 70%;
-    background-color: #111111;
+    background-color: #2b2b2b;
     top: -12%;
     right: -12%;
     animation-delay: 2s;
@@ -111,7 +111,7 @@ html {
 .container div:nth-child(4){
     height: 50%;
     width: 75%;
-    background-color: #0f0f0f;
+    background-color: #2c2c2c;
     bottom: -10%;
     left: -18%;
     animation-delay: 1.2s;
