--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,13 @@ a {
 html {
     scroll-behavior: smooth;
     overflow-x: hidden;
+    background-color: #2b2b2b;
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+::-webkit-scrollbar {
+    display: none;
+  }
 
 @viewport {
   width: device-width ;
@@ -43,6 +49,8 @@ html {
 
 /* Background section */
 
+/* Stars */
+
 .background {
     position: absolute;
     z-index: 1;
@@ -50,13 +58,39 @@ html {
     width: 100%;
     padding: 0;
     margin: 0;
-    background-color: rgba(0, 0, 255, 0);
-    background-image: radial-gradient(
-        #ffffff 1px,
-        transparent 1px
-    );
-    background-size: 40px 40px;
 }
+section i {
+    position: absolute;
+    background-color: white;
+    border-radius: 50%;
+    box-shadow: 0 0 10px white,
+    0 0 20px white, 
+    0 0 40px white, 
+    0 0 80px white;
+    animation: animate linear infinite;
+}
+
+@keyframes animate
+{
+    0%
+    {
+        opacity: 0;
+    }
+    10%
+    {
+        opacity: 1;
+    }
+    90% 
+    {
+        opacity: 1;
+    }
+    100%
+    {
+        opacity: 0;
+    }
+}
+
+/* Breathing background */
 
 *,
 *:before,
@@ -158,10 +192,10 @@ section {
 .page2 {
     margin-left: 5vw;
     margin-right: 5vw;
-    background: rgba(255, 255, 255, 0.05);
+    background: rgba(255, 255, 255, 0.01);
     border-radius: 16px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(4.9px);
+    backdrop-filter: blur(3px);
     -webkit-backdrop-filter: blur(4.9px);
     border: 1px solid rgba(255, 255, 255, 0.2);
 }
