--- a/styles.css
+++ b/styles.css
@@ -111,32 +111,57 @@ section i {
 section {
     height: 100vh;
     display: flex;
-    justify-content: center;
-    align-items: center;
     scroll-snap-align: start;
     scroll-snap-stop: always;
 }
 
-.page1 {
+.page {
     background-color: #16161600;
     color: white;
-    font-size: 4rem;
+    font-size: 90vh;
+    display: flex;
+    flex-direction: column;
+}
+/* 
+.page1 {
+
 }
 
 .page2 {
-    background-color: #16161600;
-    color: white;
-    font-size: 4rem;
+
 }
 
 .page3 {
-    background-color: #16161600;
-    color: white;
-    font-size: 4rem;
+
 }
 
 .page4 {
-    background-color: #16161600;
-    color: white;
-    font-size: 4rem;
-}
+
+} */
+
+.pagetitle {
+    position: relative;
+    z-index: 10;
+    background:red;
+    height:50vh;
+    max-width: 500px;
+    margin-bottom:2em;
+    opacity: 0;
+    transition: all .25s ease-in-out;
+    border-radius: 20px;
+    font-size: 100px;
+  }
+  
+  .pagetitle:nth-of-type(odd) {
+    transform: translateX(-90%);
+  }
+  
+  .pagetitle:nth-of-type(even) {
+    transform: translateX(90%);
+  }
+  
+  .pagetitle.visible {
+    transform: translateX(0);
+    background-color: lime;
+    opacity: 1;
+  }
