--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ a {
 html {
     scroll-behavior: smooth;
     overflow-x: hidden;
-    background-color: #2b2b2b;
+    background-color: #000000;
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
@@ -140,10 +140,7 @@ section {
 } */
 
 .pagetitle {
-    position: relative;
     z-index: 10;
-    background:red;
-    height:50vh;
     max-width: 500px;
     margin-bottom:2em;
     opacity: 0;
