--- a/styles.css
+++ b/styles.css
@@ -148,26 +148,10 @@ section {
 
 .pagetitle {
     position: relative;
-    left: 3.5vw;
-    top: 5vh;
+    left: 2.4vw;
+    top: 70vh;
     z-index: 10;
-    max-width: 500px;   
-    opacity: 0;
-    transition: all .25s ease-in-out;
+    transition: all .75s ease-in-out;
     border-radius: 20px;
-    font-size: 100px;
-  }
-  
-  .pagetitle:nth-of-type(odd) {
-    transform: translateX(-90%);
-  }
-  
-  .pagetitle:nth-of-type(even) {
-    transform: translateX(-90%);
-  }
-  
-  .pagetitle.visible {
-    transform: translateX(0);
-    background-color: lime;
-    opacity: 1;
+    font-size: 20vh;
   }
