--- a/styles.css
+++ b/styles.css
@@ -15,10 +15,15 @@ a {
     text-decoration: none;
 }
 
+body {
+    height: 100%;
+    margin: 0;
+    overflow: hidden;
+    box-sizing: border-box;
+}
+
 html {
     scroll-behavior: smooth;
-    overflow-x: hidden;
-    background-color: #000000;
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
@@ -46,47 +51,7 @@ html {
 
 /* Background section */
 
-/* Stars */
 
-.background {
-    position: absolute;
-    z-index: 1;
-    height: 1vh;
-    width: 100%;
-    padding: 0;
-    margin: 0;
-}
-
-section i {
-    position: absolute;
-    background-color: white;
-    border-radius: 50%;
-    box-shadow: 0 0 10px white,
-    0 0 20px white, 
-    0 0 40px white, 
-    0 0 80px white;
-    animation: animate linear infinite;
-}
-
-@keyframes animate
-{
-    0%
-    {
-        opacity: 0;
-    }
-    10%
-    {
-        opacity: 1;
-    }
-    90% 
-    {
-        opacity: 1;
-    }
-    100%
-    {
-        opacity: 0;
-    }
-}
 
 /* Pages container section */
 
@@ -158,6 +123,12 @@ section {
     display: flex;
     align-items: center;
     left: 1vw;
+    top: 45 vh;
     display: flex;
-    height: 100vh;
   }
+
+canvas {
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+}
