--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,7 @@ body {
     margin: 0;
     overflow: hidden;
     box-sizing: border-box;
+    background-color: rgb(14, 14, 14);
 }
 
 html {
@@ -78,7 +79,7 @@ section {
 .page {
     background-color: #16161600;
     color: white;
-    font-size: 10vh;
+    font-size: 20vh;
     display: flex;
     flex-direction: column;
 }
@@ -102,10 +103,14 @@ section {
 .pagenum {
     position: relative;
     left: 1vw;
-    top: 0;
-    max-height: 0vh;
+    top: 6vh;
+    max-height: 10vh;
     display: flex;
     align-items: center;
+    background-color: #000000;
+    color: white;
+    transform: rotate(270deg);
+    mix-blend-mode: multiply;
 }
 
 .pagetitle {
@@ -115,7 +120,6 @@ section {
     z-index: 10;
     transition: all .75s ease-in-out;
     border-radius: 20px;
-    font-size: 20vh;
   }
 
   .pagenumcont {
@@ -131,4 +135,10 @@ canvas {
     width: 100%;
     height: 100%;
     z-index: 0;
+}
+
+.indexcont {
+    width: calc(300px);
+    height: 100vw;
+    overflow: hidden;
 }
